Removed https errors

--- a/app/views/layouts/auth.html.erb
+++ b/app/views/layouts/auth.html.erb
@@ -3,8 +3,8 @@
   <head>
     <title>Blendin</title>
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no' name='viewport' />
-    <%= csrf_meta_tags %>    
-    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Playfair+Display:400,400italic,700,700italic%7CMontserrat:700,400&amp;subset=latin,latin" media="all">
+    <%= csrf_meta_tags %>
+    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Playfair+Display:400,400italic,700,700italic%7CMontserrat:700,400&amp;subset=latin,latin" media="all">
     <%= stylesheet_link_tag 'auth', media: 'all' %>
     <%= javascript_include_tag 'auth' %>
   </head>
@@ -17,7 +17,7 @@
     <% elsif alert %>
       <div id="error_explanation"><p><%= alert %></p></div>
     <% end %>
-    
+
     <main class="page_wrapper">
       <nav class="header header--06">
           <div class="container header__container">
@@ -69,7 +69,7 @@
               <p><b>3.</b> log in to our online platform to chat with other Blenders, share stories and ideas!</p>
             </div>
             <div class="col-md-6 col-lg-2 features__item features__item--06">
-      
+
             </div>
             <div class="col-md-6 col-lg-3 features__item features__item--06 move-to-top">
               <p class="features__description">In order to maintain the Blendin foundation we would like to ask you for a donation, the money you donate will go to our online development and wil only be used to generate as much Blends (meet ups) as possible. Help us grow! </p>
@@ -136,7 +136,7 @@
       </footer>
     </main>
 
-    <script src="https://www.leanfund.us/widget.js"></script>
+    <script src="//www.leanfund.us/widget.js"></script>
     <script type="text/javascript">
       var _iub = _iub || [];
       _iub.csConfiguration = {
