Update hp and query

--- a/app/views/layouts/auth.html.erb
+++ b/app/views/layouts/auth.html.erb
@@ -62,18 +62,15 @@
             <div class="col-md-6 col-lg-3 features__item features__item--06">
               <%= yield %>
             </div>
+
+          
             <div class="col-md-6 col-lg-3 features__item features__item--06">
               <h3 class="features__item_title">Getting started</h3>
               <p><b>1.</b> Make an account and tell us who you are</p>
               <p><b>2.</b> Wait for the organization to get in touch to introduce you to your best match</p>
               <p><b>3.</b> log in to our online platform to chat with other Blenders, share stories and ideas!</p>
-            </div>
-            <div class="col-md-6 col-lg-2 features__item features__item--06">
-
-            </div>
-            <div class="col-md-6 col-lg-3 features__item features__item--06 move-to-top">
-              <p class="features__description">In order to maintain the Blendin foundation we would like to ask you for a donation, the money you donate will go to our online development and wil only be used to generate as much Blends (meet ups) as possible. Help us grow! </p>
-              <div id="leanfund-widget" data-locale="en" data-project-id="10" data-border="3" data-border-color="2080C6" data-background-color="ffffff" data-opacity="0.95" data-button-color="2080C6" data-border-radius="5" data-progress-meter-color="2080C6" data-font-color="424D54" style="margin: 0 auto; max-width: 1000px" ></div>
+              <!-- <p class="features__description">In order to maintain the Blendin foundation we would like to ask you for a donation, the money you donate will go to our online development and wil only be used to generate as much Blends (meet ups) as possible. Help us grow! </p>
+              <div id="leanfund-widget" data-locale="en" data-project-id="10" data-border="3" data-border-color="2080C6" data-background-color="ffffff" data-opacity="0.95" data-button-color="2080C6" data-border-radius="5" data-progress-meter-color="2080C6" data-font-color="424D54" style="margin: 0 auto; max-width: 1000px" ></div> -->
             </div>
           </div>
         </div>
@@ -136,7 +133,6 @@
       </footer>
     </main>
 
-    <script src="//www.leanfund.us/widget.js"></script>
     <script type="text/javascript">
       var _iub = _iub || [];
       _iub.csConfiguration = {
