--- a/app/views/layouts/auth.html.erb
+++ b/app/views/layouts/auth.html.erb
@@ -70,6 +70,11 @@
               <p><b>2.</b> Wait for the organization to get in touch to introduce you to your best match</p>
               <p><b>3.</b> log in to our online platform to chat with other Blenders, share stories and ideas!</p>
             </div>
+
+            <div class="col-md-6 col-lg-3 features__item features__item--06">
+              <%= javascript_pack_tag 'hello_react' %>
+            </div>
+
           </div>
         </div>
       </div>
