--- a/app/views/layouts/auth.html.erb
+++ b/app/views/layouts/auth.html.erb
@@ -48,7 +48,7 @@
             <h2 class="features__title--06">
               Welcome!
             </h2>
-            <span class="features__description features__description--06">We connect newcomers (refugees) with Dutch locals, If your are a newcomer or a Dutch citizen we can connect you in order to bridge the divide. Register now, it's free and only takes 3 minutes.</span>
+            <span class="features__description features__description--06">We connect newcomers (refugees) with Dutch locals.<br> If you are a newcomer or a Dutch citizen we can connect you in order to bridge the divide. Register now, it's free and only takes 3 minutes.</span>
           </div>
           <div class="row features__row">
            <!--<div class="col-md-6 col-lg-3 features__item features__item--06">
@@ -66,15 +66,10 @@
 
             <div class="col-md-6 col-lg-3 features__item features__item--06">
               <h3 class="features__item_title">Getting started</h3>
-              <p><b>1.</b> Make an account and tell us who you are</p>
-              <p><b>2.</b> Wait for the organization to get in touch to introduce you to your best match</p>
-              <p><b>3.</b> log in to our online platform to chat with other Blenders, share stories and ideas!</p>
+              <p><b>1.</b> Create an account and tell us who you are.</p>
+              <p><b>2.</b> Log in and start chatting to matches close to you.</p>
+              <p><b>3.</b> We will get in touch to personally introduce you to your best match.</p>
             </div>
-
-            <div class="col-md-6 col-lg-3 features__item features__item--06">
-              <%= javascript_pack_tag 'hello_react' %>
-            </div>
-
           </div>
         </div>
       </div>
