--- a/app/views/tags/_select.html.erb
+++ b/app/views/tags/_select.html.erb
@@ -30,9 +30,6 @@
           <span>Dancing</span>
         </li>
         <li class="tag-bubble">
-          <span>Diving</span>
-        </li>
-        <li class="tag-bubble">
           <span>Drawing</span>
         </li>
         <li class="tag-bubble">
@@ -40,9 +37,6 @@
         </li>
         <li class="tag-bubble">
           <span>Finance</span>
-        </li>
-        <li class="tag-bubble">
-          <span>Friends</span>
         </li>
         <li class="tag-bubble">
           <span>Football</span>
@@ -58,9 +52,6 @@
         </li>
         <li class="tag-bubble">
           <span>History</span>
-        </li>
-        <li class="tag-bubble">
-          <span>Hip hop</span>
         </li>
         <li class="tag-bubble">
           <span>International relations</span>
@@ -100,6 +91,54 @@
         </li>
         <li class="tag-bubble">
           <span>Writing</span>
+        </li>
+        <li class="tag-bubble">
+          <span>Video Games</span>
+        </li>
+        <li class="tag-bubble">
+          <span>Arts & Crafts</span>
+        </li>
+        <li class="tag-bubble">
+          <span>Gardening</span>
+        </li>
+        <li class="tag-bubble">
+          <span>Nature</span>
+        </li>
+        <li class="tag-bubble">
+          <span>Making music</span>
+        </li>
+        <li class="tag-bubble">
+          <span>Theatre</span>
+        </li>
+        <li class="tag-bubble">
+          <span>Board Games</span>
+        </li>
+        <li class="tag-bubble">
+          <span>Languages</span>
+        </li>
+        <li class="tag-bubble">
+          <span>Ice Skating</span>
+        </li>
+        <li class="tag-bubble">
+          <span>Cars</span>
+        </li>
+        <li class="tag-bubble">
+          <span>Cycling</span>
+        </li>
+        <li class="tag-bubble">
+          <span>Shopping</span>
+        </li>
+        <li class="tag-bubble">
+          <span>Gymnastics</span>
+        </li>
+        <li class="tag-bubble">
+          <span>Concerts</span>
+        </li>
+        <li class="tag-bubble">
+          <span>Social Science</span>
+        </li>
+        <li class="tag-bubble">
+          <span>Philosophy</span>
         </li>
     </ul>
 
