--- a/app/views/nav/_main.html.erb
+++ b/app/views/nav/_main.html.erb
@@ -26,7 +26,7 @@
 	</div>
 	<ul>
 	  	<li><%= link_to t('nav.settings'), edit_user_path(current_user) %></li>
-			<li><%= link_to t('nav.edit_availability'), me_availabilities_path %></li>
+			<!-- <li><%= link_to t('nav.edit_availability'), me_availabilities_path %></li> -->
 			<li><%= link_to t('nav.edit_interest'), tag_users_path(current_user) %></li>
 			<% if current_user.admin? %>
 	  		<li><%= link_to "Admin", admin_dashboard_index_path %></li>
