--- a/app/assets/stylesheets/base/_layout.scss
+++ b/app/assets/stylesheets/base/_layout.scss
@@ -7,7 +7,7 @@ body{
   display: -moz-box;
   display: -ms-flexbox;
   display: -webkit-flex;
-  display: flex;  
+  display: flex;
   -webkit-flex-flow: row wrap;
   flex-flow: row wrap;
 }
@@ -51,8 +51,8 @@ body{
     position: absolute;
     background: rgba(0, 0, 0, 0.53);
     left: 0;
-    top: 0; 
-    height:100%; 
+    top: 0;
+    height:100%;
     width:100%;
     z-index: 0;
   }
@@ -102,7 +102,7 @@ body{
 
 @media all and (min-width: 800px) {
   .main    { flex: 3 0px; }
-  .aside-1 { order: 1; } 
+  .aside-1 { order: 1; }
   .main    { order: 2; }
   .aside-2 { order: 3; }
   .footer  { order: 4; }
@@ -193,7 +193,7 @@ body{
 }
 /* Generated with Bounce.js. Edit at https://goo.gl/HIjMwO */
 
-@-webkit-keyframes slidepanel { 
+@-webkit-keyframes slidepanel {
   55.56% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 1000, 0, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 1000, 0, 0, 1); }
   56.98% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 583.095, 0, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 583.095, 0, 0, 1); }
   58.36% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 344.944, 0, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 344.944, 0, 0, 1); }
@@ -202,10 +202,10 @@ body{
   63.92% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 40.522, 0, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 40.522, 0, 0, 1); }
   66.68% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 13.794, 0, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 13.794, 0, 0, 1); }
   77.8% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0.158, 0, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0.158, 0, 0, 1); }
-  100% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); } 
+  100% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
 }
 
-@keyframes slidepanel { 
+@keyframes slidepanel {
   55.56% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 1000, 0, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 1000, 0, 0, 1); }
   56.98% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 583.095, 0, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 583.095, 0, 0, 1); }
   58.36% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 344.944, 0, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 344.944, 0, 0, 1); }
@@ -214,7 +214,7 @@ body{
   63.92% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 40.522, 0, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 40.522, 0, 0, 1); }
   66.68% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 13.794, 0, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 13.794, 0, 0, 1); }
   77.8% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0.158, 0, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0.158, 0, 0, 1); }
-  100% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); } 
+  100% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
 }
 
 .o-menu {
@@ -246,7 +246,7 @@ body{
         font-size: 1.5em;
         span{
           color:#74ccd1;
-          margin-right:1em; 
+          margin-right:1em;
         }
       }
     }
@@ -287,6 +287,9 @@ body{
 }
 
 @media screen and (max-width: 480px) {
+  .info-overlay{
+    display: none;
+  }
   #panel-overlay{
       .content{ width: 100%; padding:5rem 1.2em;}
        .title-line{
@@ -298,7 +301,7 @@ body{
         height: 50px;
         right: 0; top:0; left:auto;
         background-size:75%;
-        background-color:#000;  
+        background-color:#000;
       }
   }
   .iubenda-cs-close-btn{
@@ -308,6 +311,9 @@ body{
     p, .iubenda-cs-cookie-policy-lnk{
       font-size: 10px;
     }
+  }
+  .detail-card a{
+    font-size: 0.3em;
   }
   .o-menu-content {
       position: relative;
@@ -326,4 +332,3 @@ body{
     }
   }
 }
-
