--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -13,4 +13,4 @@
 @import 'components/Nav.css';
 @import 'components/Profile.css';
 @import 'components/Tags.css';
-@import 'components/Alert.css';
+@import 'components/Modal.css';
