--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -155,3 +155,13 @@ select{
   min-width: auto !important;
   background: none;
 }
+
+.parsley-errors-list{
+  padding: 0;
+  margin: 0;
+}
+.parsley-errors-list li{
+  list-style-type: none;
+  color: #ed6363;
+  font-size: 0.9em;
+}
