--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -4,38 +4,38 @@
         <%= devise_error_messages! %>
 
           <label class="Label">Email</label>
-          <%= f.email_field :email, autofocus: true, class:"Input"%>
+          <%= f.email_field :email, autofocus: true, class:"Input", 'data-parsley-trigger' => "change" %>
 
           <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
             <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
           <% end %>
 
           <label class="Label">Full name</label>
-          <%= f.text_field :username, class:"Input" %>
+          <%= f.text_field :username, class:"Input" , required: true %>
 
           <label class="Label">About me</label>
           <%= f.text_area :about, class:"Input" %>
 
 
           <label class="Label">Where do you live?</label>
-          <%= f.text_field :full_street_address, class:"Input AddressField" %>
+          <%= f.text_field :full_street_address, class:"Input AddressField", required: true %>
           <i>(we need your current password to confirm your changes)</i>
 
           <label class="Label">Phone number</label>
-          <%= f.text_field :phone, required: 'true', class: "Input" %>
+          <%= f.text_field :phone, required: 'true', class: "Input", required: true %>
           <i>(Possibly the one you have whatsapp on)</i>
 
           <label class="Label">Job</label>
-          <%= f.text_field :job, class: "Input" %>
+          <%= f.text_field :job, class: "Input", required: true %>
 
           <label class="Label">Date of Birth</label>
-          <%= f.date_select :birthday, {start_year: 1960, end_year: 2000}, { class: 'Input Select'} %>
+          <%= f.date_select :birthday, {start_year: 1960, end_year: 2000}, { class: 'Input Select' , required: true} %>
 
           <label class="Label">Country of origin</label>
-          <%= f.text_field :country, id:"country-js", class:"Input AddressField" %>
+          <%= f.text_field :country, id:"country-js", class:"Input AddressField", required: true %>
 
           <label class="Label">Current password</label> <i>(we need your current password to confirm your changes)</i>
-          <%= f.password_field :current_password, autocomplete: "off", class:"Input" %>
+          <%= f.password_field :current_password, autocomplete: "off", class:"Input", required: true %>
 
           <%= f.submit "Update", class:"Button" %>
       <% end %>
@@ -50,18 +50,6 @@
 <script src="https://cdn.jsdelivr.net/places.js/1/places.min.js"></script>
   <script>
   $(function () {
-
-    $("input[type='submit']").prop("disabled", true);
-    $("input#user_phone").formance("format_phone_number")
-
-    $("input#user_phone").formance("format_phone_number")
-      .on( 'keyup change blur', function (event) {
-       if ( $(this).formance('validate_phone_number') )
-         $("input[type='submit']").prop("disabled", false);
-       else
-         $("input[type='submit']").prop("disabled", true);
-     });
-
 
     var placesAutocomplete = places({
       container: document.querySelector('.AddressField'),
@@ -85,7 +73,11 @@
       }
     });
 
-
+    $('#edit_user').parsley().on('field:validated', function() {
+    })
+    .on('form:submit', function() {
+      return true;
+    });
 
   });
 </script>
