WIP: Finish blending component with all cases

--- a/app/assets/stylesheets/components/Button.css
+++ b/app/assets/stylesheets/components/Button.css
@@ -28,6 +28,8 @@
   width: 100%;
   background: #74CCD1;
   color:#FFF;
+  text-align: center;
+  text-decoration: none;
 }
 .Button:hover{
   background: #6fdce3;
