--- a/app/assets/stylesheets/components/Modal.css
+++ b/app/assets/stylesheets/components/Modal.css
@@ -55,6 +55,7 @@
   opacity: 0;
   transform: scale(0);
   transition: opacity 0.2s, transform 0.2s, z-index 0s 0.2s;
+
 }
 .modal-visible .modal-inner {
   z-index: 100;
@@ -71,9 +72,22 @@
   width: 25px;
   height: 25px;
   line-height: 25px;
-  font-size: 13px;
+  font-size: 1em;
   cursor: pointer;
   text-align: center;
   background: #fff;
   box-shadow: -1px 1px 2px rgba(0,0,0,0.2);
+}
+
+.modal-content{
+  padding: 1em;
+}
+.modal-content h1{
+  margin-top: 0.5em;
+}
+.modal-content p{
+  font-size: 1.3em;
+}
+.modal-hider{
+  display: none;
 }
