Picture upload wizard

--- a/app/assets/stylesheets/components/Button.css
+++ b/app/assets/stylesheets/components/Button.css
@@ -10,6 +10,7 @@
   outline: none;
   padding: 0.9em 1.3em;
   cursor: pointer;
+  text-decoration: none;
 }
 
 .Button:hover{
@@ -17,8 +18,19 @@
   color: #FFF;
 }
 
-.CenterAling{
-  margin: 0 auto;
+.Button.full{
+  background: #74CCD1;
+  border: 2px solid #74CCD1;
+  color: #FFF;
+}
+.Button.full.back{
+  background: #dadada;
+  border: 2px solid #c4c4c4;
+  color: #8a8a8a;
+}
+
+.Button.center{
+  margin: 2em auto !important;
   display: block;
 }
 
