--- a/app/assets/stylesheets/components/choices.scss
+++ b/app/assets/stylesheets/components/choices.scss
@@ -6,7 +6,7 @@ $choices-selector: 'choices' !default;
 $choices-font-size-lg: 1em !default;
 $choices-font-size-md: 1em !default;
 $choices-font-size-sm: 1em !default;
-$choices-guttering: 24px !default;
+$choices-guttering: 0 !default;
 $choices-border-radius: 2.5px !default;
 $choices-border-radius-item: 20px !default;
 $choices-bg-color: #FFFFFF !default;
