--- a/app/views/devise/registrations/_form.html.erb
+++ b/app/views/devise/registrations/_form.html.erb
@@ -9,7 +9,7 @@
     :href_terms => link_to(t("sign.data_terms"), '/docs/Terms_and_conditions_Blendin.docx')) %>
   </p>
   <div class="form-group" data-no-turbolink>
-    <%= f.submit "Sign up", class: "button button--blue button--gray-shadow" %>
+    <%= f.submit "Sign up"" %>
   </div>
 
 <% end %>
