--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<section class="Auth clearfix mt4 mxn2 py2 px2">
+<section class="Auth clearfix flex items-center">
   <div class="sm-col-6 lg-col-3 mx-auto">
     <%= render "devise/shared/headline" %>
 
@@ -13,7 +13,7 @@
       </label>
 
       <div class="actions">
-        <%= f.submit "Sign up", class: "Button CenterAling"  %>
+        <%= f.submit "Sign up", class: "Button center"  %>
       </div>
     <% end %>
 
