--- a/app/assets/stylesheets/components/Input.css
+++ b/app/assets/stylesheets/components/Input.css
@@ -28,8 +28,17 @@
   height: auto !important;
 }
 
+.InputUpload{
+  position: absolute;
+  left: 0; top: 0;
+  height: 100%;
+  width: 100%;
+  cursor: pointer;
+}
+
 .DropArea{
   width: 250px;
+  position: relative;
   height: 250px;
   border-width: 2px;
   border-color: rgb(102, 102, 102);
@@ -38,12 +47,8 @@
   border-radius: 5px;
 }
 
-.DropArea p{
-  text-align: center;
-  margin: 0 1em;
-}
-.DroppedImage{
-  width: 30px;
-  margin: 1em auto;
+.DropArea img{
+  margin: 1.5em auto;
   display: block;
+  height: 80%;
 }
