--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -2,6 +2,7 @@ body{
   font-family: 'Quicksand', sans-serif;
   font-size: 1.1em;
   margin: 0;
+  color: #333333;
 }
 
 a{
@@ -31,7 +32,9 @@ a:hover{
   color: #ce0906;
   margin-left: 0.3em;
 }
-
+i{
+  font-size: 0.8em;
+}
 label{
   font-size: 1.2em;
 }
@@ -51,12 +54,15 @@ label{
   bottom: 0;
   background-color: rgba(111, 111, 111, 0.65);
 }
+
 .Modal h2{
   margin: 0;
 }
+
 .Modal h1{
   margin: 0.3em 0;
 }
+
 @media only screen and (min-width: 40em) {
   .bigsize{
     font-size: 3em;
